# difacto

./: .gitignore  CMakeLists.txt  Makefile
include/difacto/: loss.h  predicter.h  store.h  updater.h
src/: CMakeLists.txt  main.cc  predicter.cc  updater.cc
src/bcd/: bcd_updater.h  bcd_utils.h
src/data/: localizer.cc
src/lbfgs/: lbfgs_updater.h
src/predict/: fm_predicter.cc  fm_predicter.h
src/reader/: batch_reader.cc
src/sgd/: sgd_learner.cc  sgd_learner.h  sgd_param.h  sgd_updater.cc  sgd_updater.h
src/tracker/: async_local_tracker.h
tests/cpp/: kv_match_test.cc
